BugFix & Detail: show all headings, not only present ones